ui/apps/themes/style.less
/* ... */
//
// Classic and mobile toolbars
//

/* definitions */
@toolbar-line-height: 24px;
@toolbar-vertical-padding: 10px;
@toolbar-height: @toolbar-line-height + 2 * @toolbar-vertical-padding + 1;

.mobile-navbar {
    text-align: center;
    font-size: 15px;
    .navbar-action {
        .ellipsis();
        max-width: 24%;
        top: 10px;
        position: absolute;
        &.left {
            .fa-chevron-left {
                margin-right: 2px;
            }
            left: 5px;
        }
        &.right {
            right: 5px;
        }
    }
    .navbar-title {
        .ellipsis();
        margin: 10px 24%;
    }
}

.mobile-toolbar {
    position: fixed;
    bottom: 0;
    background-color: #fff;
    height: @toolbar-height;
    z-index: 10;
    margin: 0;
    padding: 0 4px 0 5px;
    border-top: 1px solid #ccc;
    width: 100%;
    a.io-ox-action-link.mobile-toolbar-action {
        display: inline-block;
        font-size: 20px;
        line-height: @toolbar-height;
        width: 19.9%;
        height: @toolbar-height;
        text-align: center;
        margin: 0;
        vertical-align: middle;
    }
    .dropdown {
        display: inline-block;
        position: static;
    }
}

.classic-toolbar-visible .window-content { top: @toolbar-height; }

.classic-toolbar, .inline-toolbar, .mobile-navbar {

    position: absolute;
    top: 0;
    width: 100%;
    height: @toolbar-height;
    background-color: #fff;
    border-bottom: 1px solid #ddd;
    margin: 0;
    padding: 0 4px 0 5px;
    .user-select(none);

    html.high-contrast & {
        border-color: @hc-border-color;
    }

    & > li {

        list-style: none;
        display: inline-block;
        padding: 0;
        float: left; // to support pull-right while keeping items in-order (a11y)

        & > a {

            display: inline-block;
            line-height: @toolbar-line-height;
            padding: @toolbar-vertical-padding 14px;
            text-decoration: none;
            float: left;
            outline: 0;

            i { text-decoration: none; }
            &:focus { background-color: #eee; }
        }
    }

    & > li.pull-right {
        float: right;
        & > .dropdown-menu { right: 10px; }
    }
}

.window-toolbar {

    & > ul{
        margin: 0;
    }

    & > a {

        color: @toolbar-link-color;
        display: inline-block;
        margin: 0 1em 0 0;
        cursor: pointer;
        white-space: nowrap;
        text-decoration: none;
        outline: 0;

        &:hover {
            color: darken(@toolbar-link-color, 10%);
        }

    }

    .dropdown-menu {

        text-align: left;

        a {
            margin-right: 0;
        }

    }

    .touch & a {
        outline: 0;
    }

    .btn {
        font-size: 13px;
    }

    .btn-group + .btn-group {
        margin-left: 15px;
    }

    .btn-primary + .btn-primary {
        margin-left: 10px;
    }

    a.btn-primary, a.btn-primary:hover {
        color: white;
        font-size: 13px;
        line-height: 18px;
        text-decoration: none;
    }

    a:hover, a.button:hover {
        text-decoration: underline;
    }

}

a.button {
    line-height: 18px;
    color: #fff;
    text-align: center;
    display: inline-block;
    margin: 0 10px 0 0;
    cursor: pointer;
    background-color: #555;
    border: 1px solid #333;
    padding: 5px 1.5em 4px 1.5em;
    white-space: nowrap;
    vertical-align: middle;
    outline: none;
    text-decoration: none;
}

.window-body {

    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: @window-head-width;
    white-space: normal;
    z-index: 1;
    .user-select(text);

    & > .window-search {
        display: none;
    }

    &.search-open > .window-search {

        display: block;

        .close {
            font-size: 30px;
            position: absolute;
            top: 7px;
            right: 14px;

            html.high-contrast & {
                opacity: 1;
            }

        }

    }

}

.window-container.toolbar-right {

    .window-head {
        left: auto;
        right: 0;
    }

    .window-body {
        left: 0;
        right: @window-head-width;
    }

}

.window-search {
    position: absolute;
    top: 0;
    right: 0;
    height: 50px;
    left: 0;
    padding: 10px 13px;
    background-color: #f5f5f5;
    border-bottom: 1px solid #ddd;

    form {
        margin: 0;
    }

    .dropdown-menu {
        top: 13px;
    }

    .margin-right {
        margin-right: 2em;
    }
}

.search-query-container {

    width: 300px;
    display: inline-table;

    position: relative;
    margin-right: 2em;

    input {
        padding-right: 30px;
        position: relative;
        z-index: 1;
    }

    .clear-query {
        position: absolute;
        top: 6px;
        margin-left: -25px;
        z-index: 2;
        font-size: 18px;
        color: #CCC;
    }

    .clear-query:hover {
        color: #aaa;
    }

    .input-group-btn .search-options {
        border-radius: 0;
        border-left: 0;
    }

}

.window-content {
    top: 0;
    z-index: 2;
    background-color: @background;
    overflow: hidden;
    outline: 0;
}

.window-content textarea, textarea {
    .user-select(text);
    resize: none;
}

.window-body.search-open .window-content { top: 50px; }

.user-select-text {
    .user-select(text)
}
/* ... */

