Fixed: View option not visibile on iPad in portrait mode in mail

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -1449,7 +1449,7 @@ div.hopscotch-bubble {
 
             display: inline-block;
             line-height: @toolbar-line-height;
-            padding: @toolbar-vertical-padding 14px;
+            padding: @toolbar-vertical-padding 13px;
             text-decoration: none;
             float: left;
             outline: 0;
